--- a/SOTS_Steam/SOTS_Steam.uplugin
+++ b/SOTS_Steam/SOTS_Steam.uplugin
@@ -22,5 +22,10 @@
             "Type": "Runtime",
             "LoadingPhase": "Default"
         }
+    ],
+    "Plugins": [
+        { "Name": "OnlineSubsystem", "Enabled": true },
+        { "Name": "OnlineSubsystemUtils", "Enabled": true },
+        { "Name": "OnlineSubsystemSteam", "Enabled": true }
     ]
 }
