--- a/SOTS_Debug/SOTS_Debug.uplugin
+++ b/SOTS_Debug/SOTS_Debug.uplugin
@@ -12,5 +12,17 @@
       "Type": "Runtime",
       "LoadingPhase": "Default"
     }
+  ],
+  "Plugins": [
+    { "Name": "SOTS_ProfileShared", "Enabled": true },
+    { "Name": "SOTS_TagManager", "Enabled": true },
+    { "Name": "SOTS_INV", "Enabled": true },
+    { "Name": "SOTS_GlobalStealthManager", "Enabled": true },
+    { "Name": "SOTS_GAS_Plugin", "Enabled": true },
+    { "Name": "SOTS_Stats", "Enabled": true },
+    { "Name": "SOTS_MMSS", "Enabled": true },
+    { "Name": "SOTS_FX_Plugin", "Enabled": true },
+    { "Name": "SOTS_MissionDirector", "Enabled": true },
+    { "Name": "SOTS_KillExecutionManager", "Enabled": true }
   ]
 }
