--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -51,3 +51,27 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="SOTS.KEM.Position.Corner.Left",DevComment="Corner approach that hooks around the left side")
 +GameplayTagList=(Tag="SOTS.KEM.Position.Corner.Right",DevComment="Corner approach that hooks around the right side")
 
+; Canonical noise/detection tags for AI perception and alert tagging.
++GameplayTagList=(Tag="SOTS.Noise.Detection.Alerted",DevComment="Represents an alerted AI detection state")
++GameplayTagList=(Tag="SOTS.Noise.Detection.Detected",DevComment="Represents a fully-detected stealth state")
++GameplayTagList=(Tag="SOTS.Noise.Level.Low",DevComment="Low-loudness signals like soft footsteps")
++GameplayTagList=(Tag="SOTS.Noise.Level.Medium",DevComment="Everyday environmental sounds")
++GameplayTagList=(Tag="SOTS.Noise.Level.High",DevComment="High-loudness impact or explosion events")
++GameplayTagList=(Tag="SOTS.Noise.Source.Footstep",DevComment="Footstep-specific noises")
++GameplayTagList=(Tag="SOTS.Noise.Source.Impact",DevComment="Collision or object impact noises")
++GameplayTagList=(Tag="SOTS.Noise.Source.Environment",DevComment="Ambient environment noise")
++GameplayTagList=(Tag="SOTS.Noise.Transition.Alert",DevComment="Tag that marks the moment an AI enters an alert transition and should be emitted through TagManager")
++GameplayTagList=(Tag="SOTS.Noise.Transition.Detection",DevComment="Tag emitted when noise drives a detection escalation")
+
+; Mission lifecycle + event tags used by SOTS_MissionDirector
++GameplayTagList=(Tag="Mission.State.Started",DevComment="Applied to the player when any mission run starts")
++GameplayTagList=(Tag="Mission.State.Completed",DevComment="Applied to the player when a mission finishes successfully")
++GameplayTagList=(Tag="Mission.State.Failed",DevComment="Applied to the player when a mission fails")
++GameplayTagList=(Tag="Mission.Event.Mission.Started",DevComment="MissionDirector event triggered when mission start logic fires")
++GameplayTagList=(Tag="Mission.Event.Mission.Completed",DevComment="MissionDirector event triggered when mission completes")
++GameplayTagList=(Tag="Mission.Event.Mission.Failed",DevComment="MissionDirector event triggered when mission fails")
++GameplayTagList=(Tag="Mission.Event.Objective.PrimaryCompleted",DevComment="Primary objective completion event")
++GameplayTagList=(Tag="Mission.Event.Objective.OptionalCompleted",DevComment="Optional objective completion event")
++GameplayTagList=(Tag="Mission.Event.Rewards.Granted",DevComment="Mission rewards granted event")
++GameplayTagList=(Tag="Mission.Event.Alerts.Triggered",DevComment="Mission event fired when mission failure alert conditions hit")
+
