--- a/Plugins/SOTS_MissionDirector/SOTS_MissionDirector.uplugin
+++ b/Plugins/SOTS_MissionDirector/SOTS_MissionDirector.uplugin
@@ -38,6 +38,11 @@
       "Name": "SOTS_KillExecutionManager",
       "Enabled": true
     }
+    ,
+    {
+      "Name": "SOTS_MMSS",
+      "Enabled": true
+    }
   ],
   "SupportedTargetPlatforms": [
     "Win64"
