--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -25,6 +25,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Foley.Event.Walk",DevComment="")
 +GameplayTagList=(Tag="Foley.Event.WalkBackwds",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.ContextualAnim",DevComment="")
++GameplayTagList=(Tag="GameplayCue.Default",DevComment="Placeholder cue tag used by BP_PrintHello demo")
 +GameplayTagList=(Tag="MotionMatching",DevComment="")
 +GameplayTagList=(Tag="MotionMatching.Default",DevComment="")
 +GameplayTagList=(Tag="MotionMatching.Idle",DevComment="")
