--- a/Plugins/SOTS_BlueprintGen/SOTS_BlueprintGen.uplugin
+++ b/Plugins/SOTS_BlueprintGen/SOTS_BlueprintGen.uplugin
@@ -17,5 +17,8 @@
       "Type": "Editor",
       "LoadingPhase": "Default"
     }
+  ],
+  "Plugins": [
+    { "Name": "GameplayTagsEditor", "Enabled": true }
   ]
 }
